ios safari bg-blur fix / footer fix/ px globalWraper fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,12 @@
     --input: 215 27.9% 16.9%;
     --ring: 216 12.2% 83.9%;
   }
+
+  .backdrop-blur-ios {
+    --tw-backdrop-blur: blur(64px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur);
+    backdrop-filter: var(--tw-backdrop-blur);
+  }
 }
 
 @layer base {
